MT22_4BTL_3MRs/PPL-Project-2023-main/PPL_JasminCode/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:/Learning_Documents_of_Third_Year/Principles of Programming Languages/Assignment 222/MT22_4BTL_3MRs/PPL-Project-2023-main/PPL_JasminCode/src/main/mt22/parser/MT22.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'integer'", "'float'", "'return'", "'auto'", 
                     "'break'", "'false'", "'void'", "'array'", "'out'", 
                     "'boolean'", "'for'", "'string'", "'continue'", "'do'", 
                     "'function'", "'true'", "'of'", "'inherit'", "'else'", 
                     "'if'", "'while'", "<INVALID>", "<INVALID>", "';'", 
                     "','", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'='", "'*'", "'/'", "'+'", "'-'", "'!'", "'<='", "'>='", 
                     "'!='", "'=='", "'<'", "'>'", "'::'", "'&&'", "'||'", 
                     "'%'" ]

    symbolicNames = [ "<INVALID>", "BOOLEANLIT", "FLOATLIT", "INTLIT", "STRINGLIT", 
                      "INTEGER", "FLOAT", "RETURN", "AUTO", "BREAK", "FALSE", 
                      "VOID", "ARRAY", "OUT", "BOOLEAN", "FOR", "STRING", 
                      "CONTINUE", "DO", "FUNCTION", "TRUE", "OF", "INHERIT", 
                      "ELSE", "IF", "WHILE", "CPP_STYLE_CMT", "C_STYLE_CMT", 
                      "SEMI", "COMMA", "COLON", "LR", "RR", "LC", "RC", 
                      "LS", "RS", "ASS", "MUL", "DIV", "ADD", "MINUS", "NOT", 
                      "LTE", "GTE", "NEQ", "EQ", "LT", "GT", "STR_OPR", 
                      "AND", "OR", "MOD", "ID", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_var_decl = 3
    RULE_full_var_decl = 4
    RULE_func_decl = 5
    RULE_param_decl = 6
    RULE_id_list = 7
    RULE_param_list = 8
    RULE_param_list_body = 9
    RULE_param_prime = 10
    RULE_stmt = 11
    RULE_match_stmt = 12
    RULE_unmatch_stmt = 13
    RULE_assign_stmt = 14
    RULE_for_stmt = 15
    RULE_while_stmt = 16
    RULE_do_while_stmt = 17
    RULE_block_stmt = 18
    RULE_call_stmt = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_return_stmt = 22
    RULE_stov = 23
    RULE_stov_list = 24
    RULE_expr = 25
    RULE_expr_list = 26
    RULE_exprprime = 27
    RULE_expr0 = 28
    RULE_expr1 = 29
    RULE_expr2 = 30
    RULE_expr3 = 31
    RULE_expr4 = 32
    RULE_expr5 = 33
    RULE_expr6 = 34
    RULE_expr7 = 35
    RULE_func_call_expr = 36
    RULE_constant = 37
    RULE_sub_expr = 38
    RULE_index_operator = 39
    RULE_array_lit = 40
    RULE_var_type = 41
    RULE_func_ret_type = 42
    RULE_para_type = 43
    RULE_atomic_type = 44
    RULE_array_type = 45
    RULE_dimension = 46
    RULE_void_type = 47
    RULE_auto_type = 48
    RULE_intlit_list = 49
    RULE_lhs = 50
    RULE_index_expr = 51

    ruleNames =  [ "program", "decl_list", "decl", "var_decl", "full_var_decl", 
                   "func_decl", "param_decl", "id_list", "param_list", "param_list_body", 
                   "param_prime", "stmt", "match_stmt", "unmatch_stmt", 
                   "assign_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "block_stmt", "call_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "stov", "stov_list", "expr", "expr_list", 
                   "exprprime", "expr0", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "func_call_expr", "constant", 
                   "sub_expr", "index_operator", "array_lit", "var_type", 
                   "func_ret_type", "para_type", "atomic_type", "array_type", 
                   "dimension", "void_type", "auto_type", "intlit_list", 
                   "lhs", "index_expr" ]

    EOF = Token.EOF
    BOOLEANLIT=1
    FLOATLIT=2
    INTLIT=3
    STRINGLIT=4
    INTEGER=5
    FLOAT=6
    RETURN=7
    AUTO=8
    BREAK=9
    FALSE=10
    VOID=11
    ARRAY=12
    OUT=13
    BOOLEAN=14
    FOR=15
    STRING=16
    CONTINUE=17
    DO=18
    FUNCTION=19
    TRUE=20
    OF=21
    INHERIT=22
    ELSE=23
    IF=24
    WHILE=25
    CPP_STYLE_CMT=26
    C_STYLE_CMT=27
    SEMI=28
    COMMA=29
    COLON=30
    LR=31
    RR=32
    LC=33
    RC=34
    LS=35
    RS=36
    ASS=37
    MUL=38
    DIV=39
    ADD=40
    MINUS=41
    NOT=42
    LTE=43
    GTE=44
    NEQ=45
    EQ=46
    LT=47
    GT=48
    STR_OPR=49
    AND=50
    OR=51
    MOD=52
    ID=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.decl_list()
            self.state = 105
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Decl_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl_list




    def decl_list(self):

        localctx = MT22Parser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.decl()
                self.state = 108
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MT22Parser.Func_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def full_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Full_var_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.id_list()
                self.state = 118
                self.match(MT22Parser.COLON)
                self.state = 119
                self.var_type()
                self.state = 120
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.full_var_decl()
                self.state = 123
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def full_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Full_var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def ASS(self):
            return self.getToken(MT22Parser.ASS, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_full_var_decl




    def full_var_decl(self):

        localctx = MT22Parser.Full_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_full_var_decl)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(MT22Parser.ID)
                self.state = 128
                self.match(MT22Parser.COMMA)
                self.state = 129
                self.full_var_decl()
                self.state = 130
                self.match(MT22Parser.COMMA)
                self.state = 131
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.match(MT22Parser.COLON)
                self.state = 135
                self.var_type()
                self.state = 136
                self.match(MT22Parser.ASS)
                self.state = 137
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def func_ret_type(self):
            return self.getTypedRuleContext(MT22Parser.Func_ret_typeContext,0)


        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_decl




    def func_decl(self):

        localctx = MT22Parser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.ID)
            self.state = 142
            self.match(MT22Parser.COLON)
            self.state = 143
            self.match(MT22Parser.FUNCTION)
            self.state = 144
            self.func_ret_type()
            self.state = 145
            self.param_list()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 146
                self.match(MT22Parser.INHERIT)
                self.state = 147
                self.match(MT22Parser.ID)


            self.state = 150
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def para_type(self):
            return self.getTypedRuleContext(MT22Parser.Para_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param_decl




    def param_decl(self):

        localctx = MT22Parser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 152
                self.match(MT22Parser.INHERIT)


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 155
                self.match(MT22Parser.OUT)


            self.state = 158
            self.match(MT22Parser.ID)
            self.state = 159
            self.match(MT22Parser.COLON)
            self.state = 160
            self.para_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(MT22Parser.ID)
                self.state = 163
                self.match(MT22Parser.COMMA)
                self.state = 164
                self.id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LR(self):
            return self.getToken(MT22Parser.LR, 0)

        def param_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Param_list_bodyContext,0)


        def RR(self):
            return self.getToken(MT22Parser.RR, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param_list




    def param_list(self):

        localctx = MT22Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.LR)
            self.state = 169
            self.param_list_body()
            self.state = 170
            self.match(MT22Parser.RR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_prime(self):
            return self.getTypedRuleContext(MT22Parser.Param_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list_body




    def param_list_body(self):

        localctx = MT22Parser.Param_list_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list_body)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 22, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.param_prime()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(MT22Parser.Param_declContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_prime(self):
            return self.getTypedRuleContext(MT22Parser.Param_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_prime




    def param_prime(self):

        localctx = MT22Parser.Param_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_prime)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.param_decl()
                self.state = 177
                self.match(MT22Parser.COMMA)
                self.state = 178
                self.param_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.param_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def match_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Match_stmtContext,0)


        def unmatch_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Unmatch_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.unmatch_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Match_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def sub_expr(self):
            return self.getTypedRuleContext(MT22Parser.Sub_exprContext,0)


        def match_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Match_stmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Match_stmtContext,i)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def assign_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Assign_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Return_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MT22Parser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MT22Parser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Do_while_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Continue_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Break_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_match_stmt




    def match_stmt(self):

        localctx = MT22Parser.Match_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_match_stmt)
        try:
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(MT22Parser.IF)
                self.state = 188
                self.sub_expr()
                self.state = 189
                self.match_stmt()
                self.state = 190
                self.match(MT22Parser.ELSE)
                self.state = 191
                self.match_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.assign_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 194
                self.call_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 195
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 196
                self.for_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 197
                self.while_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 198
                self.do_while_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 199
                self.block_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 200
                self.continue_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 201
                self.break_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unmatch_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def sub_expr(self):
            return self.getTypedRuleContext(MT22Parser.Sub_exprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def match_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Match_stmtContext,0)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def unmatch_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Unmatch_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_unmatch_stmt




    def unmatch_stmt(self):

        localctx = MT22Parser.Unmatch_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_unmatch_stmt)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.match(MT22Parser.IF)
                self.state = 205
                self.sub_expr()
                self.state = 206
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.match(MT22Parser.IF)
                self.state = 209
                self.sub_expr()
                self.state = 210
                self.match_stmt()
                self.state = 211
                self.match(MT22Parser.ELSE)
                self.state = 212
                self.unmatch_stmt()
                pass

